--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.3.1'
+    implementation 'androidx.test.ext:junit-ktx:1.1.3'
     def nav_version = "2.5.3"
     implementation "androidx.navigation:navigation-compose:$nav_version"
     testImplementation 'junit:junit:4.13.2'
