--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,25 @@
 buildscript {
+    repositories {
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
+
+    }
+    dependencies {
+        classpath 'com.google.gms:google-services:4.3.13' // dependency for the Google services Gradle plugin
+
+    }
     ext {
         compose_version = '1.3.2'
         kotlin_version = '1.7.20'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
+allprojects {
+    repositories {
+        google()  // Google's Maven repository
+        mavenCentral()  // Maven Central repository
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
